# latent-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PROJECTPLAN.md  README.md
.github/workflows/: deploy.yml  python.yml  web.yml
course/: 01-big-picture.md  02-representations.md  03-jepa-and-collapse.md  04-sigreg.md  05-environment.md  06-data.md  07-training.md  08-measuring-representations.md  09-planning.md  10-decoder-free-viz.md  11-export-and-parity.md  12-browser.md  13-engineering-spine.md  README.md
docs/: 01_architecture.md  02_env_and_data.md  03_model_and_training.md  04_planning.md  05_export.md  06_web.md  07_ci_and_deploy.md
shared/fixtures/: two_rooms_parity.json
training/: README.md  pyproject.toml
training/configs/: collapse.yaml  healthy.yaml
training/src/latentlab/: __init__.py  train.py
training/src/latentlab/data/: __init__.py  dataset.py  generate.py  inspect.py
training/src/latentlab/envs/: __init__.py  make_fixtures.py  two_rooms.py
training/src/latentlab/export/: __init__.py  latent_maps.py  manifest.py  parity_test.py  push_to_hub.py  to_onnx.py
training/src/latentlab/models/: __init__.py  encoder.py  losses.py  predictor.py
training/src/latentlab/planning/: __init__.py  cem.py  evaluate.py
training/src/latentlab/probes/: __init__.py  collapse_metrics.py  linear_probe.py  report.py  rollout.py
training/tests/: test_data_pipeline.py  test_env_fixtures.py  test_models.py  test_onnx_parity.py  test_planning.py  test_smoke.py  test_two_rooms.py
web/: .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.app.json  vite.config.ts
web/e2e/: playground.spec.ts  smoke.spec.ts
web/public/: sw.js
web/src/: App.svelte  app.css  config.ts  main.ts  meta.ts
web/src/env/: twoRooms.ts
web/src/inference/: encoder.ts  manifest.ts  predictor.ts  session.ts
web/src/planner/: cem.ts  client.ts  messages.ts  worker.ts
web/src/viz/: latentPanel.ts
web/tests/: cem.test.ts  meta.test.ts  twoRooms.parity.test.ts
