[project]
name = "latentlab"
version = "0.0.1"
description = "Training pipeline for latent-lab: action-conditioned JEPA world models on Two Rooms."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "adimunot21" }]

dependencies = [
    # Core numerics / arrays. Pinned lower bounds; exact versions locked in uv.lock.
    "numpy>=1.26,<3",
    # ONNX export + runtime for parity testing against the browser artifacts.
    "onnx>=1.16",
    "onnxruntime>=1.18",
    # Config + model hosting.
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "huggingface-hub>=0.24",
    # Training telemetry.
    "tensorboard>=2.17",
    # Image IO for the data-validation gate (render frames to PNG).
    "pillow>=10.3",
]

# PyTorch lives in mutually-exclusive `cpu`/`gpu` extras so the same lockfile
# serves both environments (uv's documented PyTorch pattern):
#   local (GTX 1650):  uv sync --extra gpu --extra dev   # CUDA wheels
#   CI (no GPU):        uv sync --extra cpu --extra dev   # CPU wheels
# The two extras are declared as conflicting below.
[project.optional-dependencies]
# Pinned to 2.6.x so CPU (CI) and CUDA (local) resolve to the *same* torch
# version — important for ONNX parity later. 2.6.0+cu124 is verified working on
# the GTX 1650 (driver 595 is CUDA 13, backward-compatible with cu124 wheels).
cpu = ["torch>=2.6,<2.7"]
gpu = ["torch>=2.6,<2.7"]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/latentlab"]

# --- PyTorch CPU/GPU split (see the cpu/gpu extras above). ---
# Two explicit, mutually-exclusive indexes. cu124 wheels bundle their CUDA/cuDNN
# runtime deps and load cleanly here; the newer cu13x wheels currently have a
# broken cuDNN layout in this environment, hence cu124.
[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "gpu" }]]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "gpu" },
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# Sensible, non-fussy default set: pyflakes, pycodestyle, isort, bugbear, pyupgrade, comprehensions.
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]  # line length handled by the formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["src"]

[[tool.mypy.overrides]]
# Third-party libs without complete type stubs.
module = ["torch.*", "onnx.*", "onnxruntime.*", "tensorboard.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
